<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background_color"
    android:orientation="vertical"
    tools:context=".fragments.HomePageFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/alcohol_data_get"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/alcohol_icon"
                android:layout_width="@dimen/home_page_icon_width"
                android:layout_height="match_parent"
                android:src="@mipmap/alcohol" />

            <TextView
                android:id="@+id/alcohol_concentration_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/alcohol_icon"
                android:gravity="start|center"
                android:text="@string/today_alcohol"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/home_page_text_size"
                tools:ignore="InvalidId" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hr_data_get"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/hr_icon"
                android:layout_width="@dimen/home_page_icon_width"
                android:layout_height="match_parent"
                android:src="@mipmap/hr" />

            <TextView
                android:id="@+id/hr_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/hr_icon"
                android:gravity="start|center"
                android:text="@string/recently_hr"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/home_page_text_size"
                tools:ignore="InvalidId" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/temp_data_get"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/temp_icon"
                android:layout_width="@dimen/home_page_icon_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/temp" />

            <TextView
                android:id="@+id/temp_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/temp_icon"
                android:layout_weight="4"
                android:gravity="start|center"
                android:text="@string/recently_temp"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/home_page_text_size"
                tools:ignore="InvalidId" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bp_data_get"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"

        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/bp_icon"
                android:layout_width="@dimen/home_page_icon_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/bp" />

            <TextView
                android:id="@+id/bp_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/bp_icon"
                android:layout_weight="4"
                android:gravity="start|center"
                android:text="@string/recently_bp"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/home_page_text_size"
                tools:ignore="InvalidId" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|end">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_menu"
            android:layout_width="138dp"
            android:layout_height="193dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_icon="@drawable/ic_add_black_24dp"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_labelsPosition="left"
            tools:ignore="MissingConstraints">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_contacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_icon="@mipmap/add_contactor"
                fab:fab_size="mini"
                fab:fab_title="添加联系人" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/make_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_icon="@mipmap/make_phone"
                fab:fab_size="mini"
                fab:fab_title="拨打电话" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </LinearLayout>


</LinearLayout>